--- a/workflows/metrics.yml
+++ b/workflows/metrics.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
 
       - name: Full-year calendar
-        uses: lowlighter/metrics@latest
+        uses: Nightmarest/metrics@latest
         with:
           filename: metrics.plugin.isocalendar.fullyear.svg
           token: ${{ secrets.METRICS_TOKEN }}
